fix css faculty list overflow

--- a/web/src/components/FacultyList/FacultyList.scss
+++ b/web/src/components/FacultyList/FacultyList.scss
@@ -1,4 +1,5 @@
 .faculty-list-container {
+	width: 100px;
 	flex-grow: 0.7;
 	font-family: var(--main-font-family);
 	color: var(--contrast-text-color);
