--- a/web/src/pages/HomePage/HomePage.scss
+++ b/web/src/pages/HomePage/HomePage.scss
@@ -1,5 +1,5 @@
 .home-page-body {
-	height: 100vh;
+	min-height: 100vh;
 	display: flex;
 	justify-content: space-between;
 	background-color: var(--primary-bg-color);
